# spa-matrix

./: .gitignore  CMakeLists.txt  README.md  lsan.supp
app/: CMakeLists.txt
app/chapter01/: CMakeLists.txt  example1.3.1.c  example1.5.1.c  example1.5.2.c  example1.6.1.c  problem1.2.1.c  problem1.2.2.c  problem1.2.3.c  problem1.2.4.c  problem1.2.5.c  problem1.2.8.c  problem1.2.9.c  problem1.5.1.c  problem1.5.2.c  problem1.5.3.c
app/chapter02/: CMakeLists.txt  equation2.4.1.c  equation2.5.3.c  example2.1.1.c  example2.1.2.c  example2.2.1.c  example2.2.2.c  example2.3.1.c  example2.4.1.c  example2.4.2.c  example2.5.1.c  example2.5.2.c  problem2.1.1a.c  problem2.1.1b.c  problem2.1.1c.c  problem2.1.4.c  problem2.2.1a.c  problem2.2.1b.c  problem2.2.4.c  problem2.3.1a.c  problem2.3.1c.c  problem2.3.1d.c  problem2.3.1e.c  problem2.3.1f.c  problem2.3.2.c  problem2.3.5.c  problem2.3.6.c  problem2.3.7.c  problem2.4.1a.c  problem2.4.1b.c  problem2.4.1c.c  problem2.4.1d.c  problem2.4.2.c  problem2.4.3.c  problem2.4.7.c
include/: spam.h
san-check/: lsan-check.sh  no-leak.c
src/: CMakeLists.txt  fl.c  gauss.c  matrix.c  matrix.h
tests/: CMakeLists.txt  example_test.cc  fl_test.cc  matrix_test.cc
tests/san-check/: lsan-check.sh
